--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,6 +3,15 @@
 
 @custom-variant dark (&:is(.dark *));
 
+@font-face {
+  font-family: Monocraft;
+  src: url("./fonts/Monocraft.ttf");
+}
+
+@theme {
+  --font-mine: Monocraft, "sans-serif";
+}
+
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
@@ -122,7 +131,15 @@
     @apply scroll-m-20 text-center text-4xl font-extrabold tracking-tight text-balance;
   }
 
+  h2 {
+    @apply scroll-m-20 border-b pb-2 text-3xl font-semibold tracking-tight first:mt-0;
+  }
+
   p {
     @apply leading-7 [&:not(:first-child)]:mt-6;
+  }
+
+  ul {
+    @apply my-6 ml-6 list-disc [&>li]:mt-2;
   }
 }
