--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,7 +5,7 @@
 
 @font-face {
   font-family: Monocraft;
-  src: url("./fonts/Monocraft.ttf");
+  src: url("/fonts/Monocraft.ttf") format("truetype");
 }
 
 @theme {
