--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,9 @@
 @import "@fontsource/press-start-2p";
 @import "@fontsource/roboto/400.css";
+@import "@fontsource/roboto/500.css";
+@import "@fontsource/roboto/600.css";
 @import "@fontsource/roboto/700.css";
+@import "@fontsource/roboto/800.css";
 
 @import "tailwindcss";
 @import "tw-animate-css";
