--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,6 @@
 @import "@fontsource/press-start-2p";
+@import "@fontsource/roboto/200.css";
+@import "@fontsource/roboto/300.css";
 @import "@fontsource/roboto/400.css";
 @import "@fontsource/roboto/500.css";
 @import "@fontsource/roboto/600.css";
