--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -124,6 +124,7 @@
 
   body {
     @apply bg-lime-100 dark:bg-[#191b00] text-foreground;
+    @apply bg-[url('/images/backgrounds/main_bg.jpg')] transition-colors;
   }
 
   header {
